syntax = "proto3";

option go_package = "github.com/kleinpa/counter/api";

service Counter {
  // Increment a counter by a provided value
  rpc Increment (IncrementRequest) returns (IncrementReply) {}

  // Set a counter to a specific value
  rpc Set (SetRequest) returns (SetReply) {}

  // Get a counter's current value
  rpc Get (GetRequest) returns (GetReply) {}

  // Request a stream of updates from a counter
  rpc Watch (WatchRequest) returns (stream WatchReply) {}
}

message SetRequest {
  string id = 1;
  int32 value = 2;
}
message SetReply {
}

message IncrementRequest {
  string id = 1;
  int32 value = 2;
}
message IncrementReply {
  int32 value = 1;
}

message GetRequest {
  string id = 1;
}
message GetReply {
  int32 value = 1;
}

message WatchRequest {
  string id = 1;
}
message WatchReply {
  int32 value = 1;
}
